# repoforge

./: .dockerignore  .env.example  .gitignore  06-api-reference.md  COMPETITION_ANALYSIS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  action.yml  build-pages.sh  docker-compose.prod.yaml  docker-compose.yml  pyproject.toml  repoforge.yaml.example
.claude/: SKILLS_INDEX.md
.claude/agents/backend-agent/: AGENT.md
.claude/agents/frontend-agent/: AGENT.md
.claude/agents/main-agent/: AGENT.md
.claude/agents/orchestrator/: AGENT.md
.claude/skills/: DISCOVERY_INDEX.md
.claude/skills/backend/: SKILL.md
.claude/skills/backend/auth/: SKILL.md
.claude/skills/backend/crypto/: SKILL.md
.claude/skills/backend/database/: SKILL.md
.claude/skills/backend/generate/: SKILL.md
.claude/skills/backend/generation/: SKILL.md
.claude/skills/backend/github_oauth/: SKILL.md
.claude/skills/backend/main/: SKILL.md
.claude/skills/backend/schemas/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/frontend/api/: SKILL.md
.claude/skills/frontend/auth/: SKILL.md
.claude/skills/frontend/types/: SKILL.md
.claude/skills/frontend/useGenerationStream/: SKILL.md
.claude/skills/main/: SKILL.md
.github/workflows/: build-server.yml  ci.yml  deploy-pages.yml  docs.yml  publish.yml  skills.yml
apps/server/: Dockerfile  alembic.ini  requirements.txt  start.sh
apps/server/alembic/: env.py
apps/server/app/: __init__.py  config.py  main.py
apps/server/tests/: conftest.py  test_auth.py  test_circuit_breaker.py  test_crypto.py  test_health.py  test_repo_cloner.py  test_schemas.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
ci-local/: ci-local.sh
eval/: harness.py  scenarios_real.py
landing/: index.html
lib/: common.sh
output/: 05-data-models.md
own/skills/skill-powerups/: SKILL.md
own/skills/skill-recipes/: SKILL.md
own/skills/ui-polish/: SKILL.md
own/skills/webapp-testing/: SKILL.md
repoforge/: __init__.py  adapters.py  analysis.py  blast_radius.py  cache.py  change_impact.py  checker.py  ci.py  cli.py  cli_adapter.py  co_change.py  compressor.py  context_pruning.py  cross_repo.py  dead_code.py  decision_intel.py  decision_intel_v2.py  deep_analysis.py  dep_health.py  diagram_svg.py  diagrams.py  diff.py  diff_enhanced.py  disclosure.py  docs_generator.py  docs_prompts.py  docsify.py  ecosystem.py  edge_provenance.py  entity_impact.py  exporter.py  facts.py  generator.py  generators.py  graph.py  graph_context.py  graph_query.py  import_docs.py  incremental.py  incremental_graph.py  (+33 more)
repoforge/coverage/: __init__.py  detector.py  model.py  parsers.py  renderer.py
repoforge/docs_prompts/: __init__.py  adaptive.py  builders.py  builders_extra.py  chapters.py  classify.py  context.py  monorepo.py  system.py
repoforge/extractors/: __init__.py  go.py  java.py  javascript.py  python_ext.py  registry.py  resolver.py  rust.py  types.py  typescript.py
repoforge/intelligence/: __init__.py  ast_extractor.py  budget.py  build_parser.py  compressor.py  doc_chunks.py  extractor_registry.py  lang_c.py  lang_cpp.py  lang_csharp.py  lang_go.py  lang_java.py  lang_javascript.py  lang_kotlin.py  lang_php.py  lang_python.py  lang_ruby.py  lang_rust.py  lang_swift.py  lang_typescript.py  post_process.py  ranker.py  symbol_linker.py  verifier.py
repoforge/ir/: __init__.py  context.py  extraction.py  pipeline.py  repo.py
repoforge/pipeline/: __init__.py  context.py  generate.py  write.py
repoforge/search/: __init__.py  bm25.py  embedder.py  hybrid.py  index.py  prepare.py  types.py
repoforge/skills_from_docs/: __init__.py  conflict.py  extract.py  generate.py  ingest.py  types.py
repoforge/symbols/: __init__.py  extractor.py  graph.py  index.py  renderer.py
repoforge/templates/: cli_tool.yaml  data_science.yaml  desktop_app.yaml  frontend_app.yaml  generic.yaml  infra_devops.yaml  library_sdk.yaml  mobile_app.yaml  monorepo.yaml  web_service.yaml
scripts/: smoke-test-pages.sh
tests/: conftest.py  test_adapters.py  test_audit_command.py  test_backward_compat.py  test_blast_radius.py  test_change_impact.py  test_checker.py  test_cli_adapter.py  test_cli_integration.py  test_co_change.py  test_communities.py  test_complexity.py  test_compressor.py  test_context_pruning.py  test_cost_weights.py  test_cross_repo.py  test_dead_code.py  test_decision_intel.py  test_decision_intel_v2.py  test_deep_analysis.py  test_dep_health.py  test_diagram_svg.py  test_diagrams.py  test_diff.py  test_diff_improvements.py  test_disclosure.py  test_doc_chunks.py  test_docs.py  test_docs_generator_integration.py  test_docsify_integration.py  test_edge_provenance.py  test_entity_impact.py  test_exporter.py  test_facts.py  test_generator_integration.py  test_graph.py  test_graph_context.py  test_graph_e2e.py  test_graph_query.py  test_graph_v2.py  (+50 more)
tests/test_coverage/: test_detector.py  test_model.py  test_parsers.py  test_renderer.py
tests/test_extractors/: test_edge_cases.py  test_go.py  test_java.py  test_javascript.py  test_multi_lang.py  test_python_ext.py  test_registration.py  test_registry.py  test_resolver.py  test_rust.py  test_types.py  test_typescript.py
tests/test_intelligence/: test_ast_extractor.py  test_budget.py  test_build_parser.py  test_compressor.py  test_extractor_registry.py  test_lang_c.py  test_lang_go.py  test_lang_java.py  test_lang_javascript.py  test_lang_kotlin.py  test_lang_python.py  test_lang_ruby.py  test_lang_rust.py  test_lang_typescript.py  test_post_process.py  test_ranker.py  test_verifier.py
tests/test_search/: test_bm25.py  test_cli_search.py  test_embedder.py  test_hybrid.py  test_index.py  test_pipeline_integration.py  test_prepare.py  test_types.py
tests/test_skills_from_docs/: __init__.py  test_cli.py  test_conflict.py  test_extract.py  test_generate.py  test_ingest.py  test_types.py
tests/test_symbols/: __init__.py  test_extractor.py  test_graph.py  test_index.py  test_integration.py  test_renderer.py
(+53 files in other folders)
